Adding front-end página de ponto

--- a/front/src/index.html
+++ b/front/src/index.html
@@ -3,14 +3,49 @@
 
 <head>
   <meta charset="utf-8">
-  <title>sge</title>
+  <title>Gestão Empresarial</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <app-root></app-root>
+  <!--<app-root></app-root>-->
+  
+  <!-- PÁGINA DE PONTO -->
+
+  <div class="topbar">
+  </div>
+  <div class="menu">
+    <div class="menu-links">
+      <div class="menu-link-item">
+        <a href="">
+          <span>Novo Ponto</span>
+        </a>
+      </div>
+      <div class="menu-link-item">
+        <a href="">
+          <span>Registros Anteriores</span>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="inner-sidebar">
+  </div>
+  <div class="main-content">
+    <div class="main-content-elements">
+      <div class="main-date">Seg, 5 de Julho</div>
+      <div class="main-time">08:27:32</div>
+      <a class="start btn" href="">Iniciar Trabalho</a>
+      <div class="main-task"><input type="text" placeholder="Inserir tarefa associada..."></input></div>
+    </div>
+  </div>
+
+  <!-- PÁGINA DE REGISTROS ANTERIORES -->
 </body>
 
 </html>
+
