Adding front-end página de ponto

--- a/front/src/index.html
+++ b/front/src/index.html
@@ -22,7 +22,7 @@
   <div class="menu">
     <div class="menu-links">
       <div class="menu-link-item">
-        <a href="">
+        <a class="this-page" href="">
           <span>Novo Ponto</span>
         </a>
       </div>
@@ -34,6 +34,13 @@
     </div>
   </div>
   <div class="inner-sidebar">
+    <div class="inner-sidebar-content">
+      <div class="inner-sidebar-date">Hoje</div>
+      <div class="inner-sidebar-card">
+        <div class="inner-sidebar-card-time">08:27</div>
+        <div class="inner-sidebar-card-task">Nenhuma tarefa associada</div>
+      </div>
+    </div>
   </div>
   <div class="main-content">
     <div class="main-content-elements">
