--- a/front/src/index.html
+++ b/front/src/index.html
@@ -13,11 +13,11 @@
 </head>
 
 <body>
-  <!--<app-root></app-root>-->
-  
+  <app-root></app-root>
+
   <!-- PÁGINA DE PONTO -->
 
-  <div class="topbar">
+  <!-- <div class="topbar">
   </div>
   <div class="menu">
     <div class="menu-links">
@@ -49,10 +49,9 @@
       <a class="start btn" href="">Iniciar Trabalho</a>
       <div class="main-task"><input type="text" placeholder="Inserir tarefa associada..."></input></div>
     </div>
-  </div>
+  </div> -->
 
   <!-- PÁGINA DE REGISTROS ANTERIORES -->
 </body>
 
 </html>
-
